# madcubapy

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: run_tests.yaml
docs/source/: conf.py  contribute.rst  full_changelog.rst  history_file.rst  index.rst  index_introduction.rst  index_user_guide.rst  introduction.rst  madcubapy.io.rst  madcubapy.operations.rst  madcubapy.rst  madcubapy.utils.rst  madcubapy.visualization.rst  modules.rst  philosophy.rst  release_notes.rst
examples/: GALLERY_HEADER.rst
examples/data/: IRAS16293-SO2a-tm1.fits  IRAS16293-SO2a-tm1_hist.csv  IRAS16293-SO2a-tm2.fits  IRAS16293-SO2a-tm2_hist.csv  IRAS16293_SO2a_tm1_hist.csv  IRAS16293_SO2a_tm2_hist.csv  IRAS16293_SO_2-1_moment0_madcuba_hist.csv  IRAS16293_SO_2-1_moment0_madcuba_write.fits  IRAS16293_SO_2-1_moment0_madcuba_write_hist.csv  IRAS16293_band-7_tm2_cont_hist.csv  IRAS16293_position_8_TM2_spectra.spec  ellipse.mcroi  molecular_params_ascii.txt  molecular_params_csv.csv
examples/io/: GALLERY_HEADER.rst  plot_helpers.ipynb  read_madcuba_fits_files.ipynb  read_madcuba_fits_files.py
examples/madcubaio/: read_madcuba_fits_files.ipynb
examples/maps/: GALLERY_HEADER.rst  add_colorbar.py  plot_map.py  plot_maps.py  plot_several_maps.py  read_map.py  sync_maps.py
examples/regions/: GALLERY_HEADER.rst  import_a_region.py
tutorials/: GALLERY_HEADER.rst  measure_noise.py  plot_helpers.py  plot_helpers.txt  read_and_plot_maps.py  read_and_plot_spectra.py  read_madcuba_fits_files.py
(+155 files in other folders)
