[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "madcubapy"
version = "0.0.1"
description = "The MADCUBA python package."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "David Haasler García", email = "dhaasler@cab.inta-csic.es"}
]
dependencies = [
    "astropy",
    "matplotlib",
    "numpy"
]
classifiers= [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
keywords=[
    'madcuba',
    'radio astronomy',
]

[project.optional-dependencies]
docs = [
    "astropy[recommended]",  # installs the [recommended] dependencies
    "sphinx",
    "sphinx_rtd_theme",
    "matplotlib",
]

[project.urls]
homepage = "https://github.com/dhaasler/madcubapy"
changelog = "https://github.com/dhaasler/madcubapy/CHANGELOG.md"
documentation = "https://madcubapy.readthedocs.io/"
repository = "https://github.com/dhaasler/madcubapy.git"
